docs/7.57/md/abencds_f1_dcl_hierarchies.md
---
title: "ABAP CDS - DCL Restrictions for CDS Hierarchies"
description: |
  CDS hierarchies(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_hierarchy_glosry.htm 'Glossary Entry') can be protected using access control. It must be guaranteed, however, that individual rows are not filtered out if they are part of a logical block in the hierarchy constructi
version: "7.57"
category: "cds"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_f1_dcl_hierarchies.htm"
abapFile: "abencds_f1_dcl_hierarchies.htm"
keywords: ["select", "do", "if", "try", "data", "abencds", "dcl", "hierarchies"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Core Data Services (ABAP CDS)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds.htm) →  [ABAP CDS - Access Control](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_access_control.htm) →  [ABAP CDS - DCL Statements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_f1_dcl_syntax.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: ABAP CDS - DCL Restrictions for CDS Hierarchies, ABENCDS_F1_DCL_HIERARCHIES, 757%0D%0
A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASuggestion for improvement:)

ABAP CDS - DCL Restrictions for CDS Hierarchies

[CDS hierarchies](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_hierarchy_glosry.htm "Glossary Entry") can be protected using access control. It must be guaranteed, however, that individual rows are not filtered out if they are part of a logical block in the hierarchy construction. Otherwise the hierarchies constructed by the database could be destroyed and hierarchy operators produce undefined results.

For this reason, the usage of access conditions using arbitrary entity elements is not allowed.

However, when the CDS hierarchy declares a directory ( [DEFINE HIERARCHY ... DIRECTORY ... FILTER BY](abencds_f1_define_hierarchy.htm#!ABAP_ADDITION_4@4@)), then elements of this association can be used.

In addition, access conditions which do not result in database selections can be used:

-   PFCG conditions without fields ( ( ) = ASPECT PFCG\_AUTH( ... ) )
-   Conditions under exclusive use of [left side host expressions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_dcl_cond_left_side.htm). This enables protection for a CDS hierarchy using the hierarchy directory specified by a parameter.
-   The special conditions TRUE, FALSE, and VOID. These should not, however, be used directly in CDS access controls.

Hints

-   When conditions on the directory association are involved, they are applied to the constructed hierarchy object. The time for its creation will therefore be consumed even when the user does not have the authorization to retrieve the result.
-   The requirement to specify a FILTER BY addition in the CDS hierarchy definition still exists and by design already provides an "all or nothing" behavior regarding the hierarchy directory. Due to the properties from above, access control can act as additional reason for "nothing".